RESOLVED FIXED37043
Java regression tests spam stderr about being unable to set status message
https://bugs.webkit.org/show_bug.cgi?id=37043
Summary Java regression tests spam stderr about being unable to set status message
Alexey Proskuryakov
Reported 2010-04-02 13:55:37 PDT
------------------------ - (void)webPlugInContainerShowStatus:(NSString *)message { ... if (!_documentView) { LOG_ERROR("could not show status message (%@) because plug-in has already been destroyed", message); return; } WebView *v = [_dataSource _webView]; [[v _UIDelegateForwarder] webView:v setStatusText:message]; ------------------------ This code was added in <http://trac.webkit.org/changeset/6596>, I'm not sure why it is needed. And since then, it has degenerated into something that looks wrong (why test _documentView, and not _dataSource?) Perhaps it can be just removed.
Attachments
proposed patch (1.54 KB, patch)
2010-04-02 13:59 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-04-02 13:59:44 PDT
Created attachment 52449 [details] proposed patch
Alexey Proskuryakov
Comment 2 2010-04-02 14:22:01 PDT
Committed revision 57024.
Note You need to log in before you can comment on or make changes to this bug.