        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=37043
        Java regression tests spam stderr about being unable to set status message

        With this change, there is still spam about "Attempt to access JavaScript from destroyed
        applet, type 9." I haven't investigated if that indicates a problem or not.

        * Plugins/WebPluginController.mm: (-[WebPluginController webPlugInContainerShowStatus:]):
        Removed check for _documentView. We don't seem to care.



Canonical link: https://commits.webkit.org/48317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57024 268f45cc-cd09-0410-ab3c-d52691b4dbfc